# ai-engineering-hub

./: .pre-commit-config.yaml  CLAUDE.md  README.md  gpt_35_fine_tuning.py  pyproject.toml  rfp_generator.py  weather_server.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
data_generator/: data_generator.py
examples/01-llm-fundamentals/: __init__.py  basic_chat.py  streaming.py  structured_output.py
examples/02-multi-provider/: __init__.py  provider_comparison.py
examples/03-function-calling/: __init__.py  basic_tools.py
examples/04-rag-patterns/: __init__.py  simple_rag.py
examples/05-agents/: __init__.py  react_agent.py
examples/06-evaluation/: __init__.py  llm_as_judge.py
examples/07-fine-tuning/: __init__.py  data_preparation.py
examples/08-vision-multimodal/: __init__.py  image_analysis.py
examples/09-traditional-ml/: __init__.py  when_ml_beats_llm.py
examples/10-production-patterns/: __init__.py  rate_limiting.py
projects/semantic_search/: __init__.py  search_engine.py
src/ai_hub/: __init__.py
src/ai_hub/core/: __init__.py  config.py  errors.py  logging.py  retry.py
src/ai_hub/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/ai_hub/utils/: __init__.py  tokens.py
tests/: conftest.py
tests/unit/: test_config.py  test_errors.py  test_tokens.py
